<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".user.EditProfileActivity">

    <LinearLayout
        android:id="@+id/focusPrefferedName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelPreferedName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_prefered_name" />

        <EditText
            android:id="@+id/viewPreferredName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/preferred_name"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/focusBiography"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="auto"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelBiography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me" />

        <EditText
            android:id="@+id/viewBiography"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/biography"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:targetApi="o" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/focusSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelProfileSign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_sign" />

        <Spinner
            android:id="@+id/viewSignSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <Button
        android:id="@+id/submitProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmitProfile"
        android:text="@string/update_profile" />

</LinearLayout>