<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tasks.activities.FormActivity">

    <EditText
        android:id="@+id/newTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/task_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/newTaskDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/task_description"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/newTaskName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newTaskName"
        app:layout_constraintTop_toBottomOf="@+id/newTaskName"
        tools:targetApi="o" />

    <Button
        android:id="@+id/submitNewTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onTaskSubmission"
        android:text="@string/new_task"
        app:layout_constraintEnd_toEndOf="@+id/newTaskPhase"
        app:layout_constraintStart_toStartOf="@+id/newTaskPhase"
        app:layout_constraintTop_toBottomOf="@+id/newTaskPhase" />

    <Spinner
        android:id="@+id/newTaskPhase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/newTaskDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/newTaskDescription"
        app:layout_constraintTop_toBottomOf="@+id/newTaskDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>